psm-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pulceo-service-manager

spec:
  rules:
    - http:
        paths:
          - path: /api/v1/applications
            pathType: Prefix
            backend:
              service:
                name:  pulceo-service-manager
                port:
                  number: 7979
          - path: /psm/health
            pathType: Exact
            backend:
              service:
                name: pulceo-service-manager
                port:
                  number: 7979

---
apiVersion: v1
kind: Service
metadata:
  name: pulceo-service-manager

spec:
  ports:
    - protocol: TCP
      name: web
      port: 7979
  selector:
    app: pulceo-service-manager

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pulceo-service-manager
  labels:
    app: pulceo-service-manager

spec:
  replicas: 1
  selector:
    matchLabels:
      app: pulceo-service-manager
  template:
    metadata:
      labels:
        app: pulceo-service-manager
    spec:
      containers:
        - name: pulceo-service-manager
          image: ghcr.io/spboehm/pulceo-service-manager:main
          imagePullPolicy: Always
          volumeMounts:
            - name: psm-pv-db
              mountPath: /db
          ports:
            - containerPort: 7979
              name: web
      volumes:
        - name: psm-pv-db
          persistentVolumeClaim:
            claimName: psm-pv-db
